--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "semi": false,
   "printWidth": 100,
   "bracketSpacing": true,
-  "singleQuote": false
+  "singleQuote": false,
+  "trailingComma": "all"
 }
