--- a/package.json
+++ b/package.json
@@ -43,34 +43,50 @@
     "watch": "pkg-utils watch --strict"
   },
   "dependencies": {
-    "@sanity/incompatible-plugin": "^1.0.5"
-  },
-  "devDependencies": {
-    "@sanity/pkg-utils": "^7.0.1",
+    "@sanity/browserslist-config": "^1.0.5",
+    "@sanity/incompatible-plugin": "^1.0.5",
     "@sanity/plugin-kit": "^4.0.19",
     "@sanity/ui": "^2.11.2",
-    "@types/react": "^19.0.7",
-    "@typescript-eslint/eslint-plugin": "^8.20.0",
-    "@typescript-eslint/parser": "^8.20.0",
+    "react-dom": "^18.3.1",
+    "styled-components": "^6.1.14"
+  },
+  "devDependencies": {
+    "@sanity/pkg-utils": "^6.13.4",
+    "@types/react": "^18.3.18",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "eslint": "^8.57.1",
-    "eslint-config-prettier": "^10.0.1",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-sanity": "^7.1.3",
     "eslint-plugin-prettier": "^5.2.2",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "prettier": "^3.4.2",
     "prettier-plugin-packagejson": "^2.5.8",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "sanity": "^3.70.0",
-    "styled-components": "^6.1.14",
-    "typescript": "^5.7.3"
+    "typescript": "^5.5.4"
   },
   "peerDependencies": {
-    "react": "^18",
+    "react": "^18.3.1",
     "sanity": "^3"
   },
   "engines": {
     "node": ">=18"
+  },
+  "browserslist": [
+    "extends @sanity/browserslist-config"
+  ],
+  "verifyPackage": {
+    "packageName": true,
+    "module": true,
+    "tsconfig": true,
+    "tsc": true,
+    "dependencies": true,
+    "rollupConfig": true,
+    "babelConfig": true,
+    "sanityV2Json": true,
+    "eslintImports": true,
+    "scripts": true,
+    "pkg-utils": true,
+    "nodeEngine": true
   }
 }
