--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sanity-plugin-nyan-banner",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "A whimsical Nyan Cat to brighten your day",
   "keywords": [
     "sanity",
@@ -42,33 +42,6 @@
     "prepublishOnly": "npm run build",
     "watch": "pkg-utils watch --strict"
   },
-  "dependencies": {
-    "@sanity/browserslist-config": "^1.0.5",
-    "@sanity/incompatible-plugin": "^1.0.5",
-    "@sanity/plugin-kit": "^4.0.19",
-    "@sanity/ui": "^2.11.2",
-    "react-dom": "^19.0.0",
-    "styled-components": "^6.1.14"
-  },
-  "devDependencies": {
-    "@sanity/pkg-utils": "^6.13.4",
-    "@types/react": "^19.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-sanity": "^7.1.3",
-    "eslint-plugin-prettier": "^5.2.2",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "prettier": "^3.4.2",
-    "prettier-plugin-packagejson": "^2.5.8",
-    "typescript": "^5.5.4"
-  },
-  "peerDependencies": {
-    "react": "^19.0.0",
-    "sanity": "^3"
-  },
   "engines": {
     "node": ">=18"
   },
@@ -88,5 +61,34 @@
     "scripts": true,
     "pkg-utils": true,
     "nodeEngine": true
+  },
+  "devDependencies": {
+    "@sanity/pkg-utils": "^7.2.2",
+    "@types/react": "^19.1.5",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
+    "eslint": "^9.27.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-config-sanity": "^7.1.4",
+    "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-packagejson": "^2.5.14",
+    "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "@sanity/browserslist-config": "^1.0.5",
+    "@sanity/incompatible-plugin": "^1.0.5",
+    "@sanity/plugin-kit": "^4.0.19",
+    "@sanity/ui": "^2.15.18",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "styled-components": "^6.1.18"
+  },
+  "overrides": {
+    "prismjs": "^1.30.0",
+    "esbuild": "^0.25.4",
+    "@sanity/pkg-utils": "^7.2.2"
   }
 }
