--- a/package.json
+++ b/package.json
@@ -63,6 +63,9 @@
     "nodeEngine": true
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.9",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.27.0",
     "@sanity/pkg-utils": "^7.2.2",
     "@types/react": "^19.1.5",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
@@ -73,6 +76,7 @@
     "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^16.1.0",
     "prettier": "^3.5.3",
     "prettier-plugin-packagejson": "^2.5.14",
     "typescript": "^5.8.3"
@@ -84,11 +88,17 @@
     "@sanity/ui": "^2.15.18",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "sanity": "^3.89.0",
     "styled-components": "^6.1.18"
   },
   "overrides": {
     "prismjs": "^1.30.0",
     "esbuild": "^0.25.4",
     "@sanity/pkg-utils": "^7.2.2"
+  },
+  "sanityPlugin": {
+    "verifyPackage": {
+      "eslintImports": false
+    }
   }
 }
